phase 4 step 1
